syntax = "proto3";

package dogfight;
option go_package = "/pb";

message RegisterRequest {
    string host = 1;
    string port = 2;
}

message CreateRequest {
    string roomId = 1;
}

message StatusResponse {
    repeated RoomStatus roomStatuses = 1;

    message RoomStatus {
        string roomId = 1;
        uint32 occupancy = 2;
    }
}
